# bourse

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  package-lock.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: health.py  notifications.py  opportunities.py  pipeline.py  saved.py  sources.py
backend/app/collector/: __init__.py  base_collector.py  ofy_collector.py  reliefweb_collector.py  untalent_collector.py
backend/app/core/: config.py  database.py  redis_client.py  security.py
backend/app/jobs/: collect_job.py  notify_job.py  scheduler.py
backend/app/models/: collection_run.py  notification.py  opportunity.py  pipeline_entry.py  saved_opportunity.py  source.py
backend/app/notifications/: __init__.py  telegram_notifier.py
backend/app/schemas/: notification.py  opportunity.py  osint.py  pipeline.py  source.py
backend/app/services/: dedup_service.py  opportunity_service.py  osint_extractor.py  osint_pipeline.py  scoring_service.py  source_registry_service.py
backend/app/services/collector/: __init__.py  base_collector.py  ofy_collector.py  reliefweb_collector.py  untalent_collector.py
backend/tests/: test_health.py
backend/tests/api/: test_health.py
backend/tests/services/: test_dedup_service.py  test_opportunity_service.py  test_osint_pipeline.py  test_scoring_service.py
docs/plans/: 2026-06-09-to-the-world-implementation.md  (+1 more)
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+32 files in other folders)
