[project]
name = "to-the-world-backend"
version = "0.1.0"
description = "FastAPI backend for the to the world opportunity command center."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.5.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
