[project]
name = "to-the-world-backend"
version = "0.1.0"
description = "FastAPI backend for the to the world opportunity command center."
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.5.0",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.34",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
